ändrade färg på bakgrunden

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <body>
     <h1>Tjenare</h1>
     <p>Jag heter <strong>Maryam!!</strong> Jag går på <mark>NTI gymnasiet</mark> och är 17 år gammal.</p>
-    <a href="bildsida.html">kolla på min sida!</a>
+    <a href="om-mig.html">kolla på min sida!</a>
     <script>
          function showAlert() {
         alert('Haha I got your attention.');
     }
 
     </script>
+    <p></p>
     <button onclick="showAlert()">Attention!!!</button>
     </body>
  </html>
