lagt till upphovsrätten

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     </script>
     <p></p>
-    <button onclick="showAlert()">Attention!!!</button>
+    <button onclick="showAlert()">Attention!!!<a href="https://ntisod.github.io/wutv1test-ntielias/upphovsr%C3%A4tten.html" >Läs om upphovsrätten</a></button>
+
+    
     </body>
  </html>
