--- a/upphovrätten.html
+++ b/upphovrätten.html
@@ -12,15 +12,15 @@
 <body>
  
     
- <em>Denna text är skapad av en AI-språkmodell <a href=https://gemini.google.com/"> (Gemini)</a> och är inte skyddad av upphovsrätt. Informationen i texten är avsedd att vara informativ men bör inte ses som juridisk rådgivning.</em>
+ <p><em>Denna text är skapad av en AI-språkmodell <a href=https://gemini.google.com/"> (Gemini)</a> och är inte skyddad av upphovsrätt. Informationen i texten är avsedd att vara informativ men bör inte ses som juridisk rådgivning.</em></p>
     <p></p>
-    <h1> Upphovsrättslagen: En enkel förklaring</h1>
-<strong>Upphovsrättslagen</strong> är till för att skydda det som är skapat, oavsett om det är en bok, en låt, en film, en webbplats eller en bild. Den ger den som skapat något, alltså upphovspersonen, en exklusiv rätt att bestämma hur detta verk får användas.
+    <p><h1> Upphovsrättslagen: En enkel förklaring</h1></p>
+<p><strong>Upphovsrättslagen</strong> är till för att skydda det som är skapat, oavsett om det är en bok, en låt, en film, en webbplats eller en bild. Den ger den som skapat något, alltså upphovspersonen, en exklusiv rätt att bestämma hur detta verk får användas.</p>
 <p></p>
 
-<strong>Vad skyddas av upphovsrätten?</strong>
+<p><strong>Vad skyddas av upphovsrätten?</strong></p>
 <p></p>
-När du skapar något nytt och originellt, t.ex.:
+<p>När du skapar något nytt och originellt, t.ex.: </p>
 <p></p>
 <ul>
 <strong><li>Skriver en text:</strong> En roman, en artikel, en bloggpost</li>
@@ -34,7 +34,7 @@ När du skapar något nytt och originellt, t.ex.:
 <strong><li>Skriver kod:</strong> Ett datorprogram, en app, en webbplats</li>
 </ul>
 <p></p>
-...så får du automatiskt upphovsrätt till det du skapat. Det betyder att du har ensamrätt att:
+<p>...så får du automatiskt upphovsrätt till det du skapat. Det betyder att du har ensamrätt att:</p>
 <p></p>
 <ul>
 <strong><li>Kopiera verket</li>
@@ -44,7 +44,7 @@ När du skapar något nytt och originellt, t.ex.:
 <li>Gör ändringar i verket</li></strong>
 </ul>
 <p></p>
-<strong>Varför är upphovsrätten viktig?</strong>
+<p><strong>Varför är upphovsrätten viktig?</strong></p>
 <p></p>
 <ul>
 <strong><li>kreativitet:</strong> Upphovsrätten stimulerar till kreativitet genom att ge skapare ekonomiska incitament och erkännande. </li>
@@ -54,14 +54,14 @@ När du skapar något nytt och originellt, t.ex.:
 <strong><li>Säkerställer rättvisa:</strong> Den ser till att skapare får betalt för sitt arbete. </li>
 </ul>
 <p></p>
-<strong>Vad innebär det för dig?</strong>
+<p><strong>Vad innebär det för dig?</strong></p>
 <p></p>
 <ul>
 <strong><li>Som skapare:</strong> Du har rätt att bestämma över ditt verk och kan ge tillstånd för andra att använda det under vissa villkor.</li>
 <strong><li>Som användare:</strong> Du måste ha tillstånd från upphovspersonen innan du använder någons verk. Det finns dock undantag, som t.ex. citat i forskning eller undervisning (fair use). </li>
 </ul>
 <p></p>
-<strong>Viktigt att komma ihåg:</strong>
+<p><strong>Viktigt att komma ihåg:</strong></p>
 <p></p>
 <ul>
 <strong><li>Upphovsrätten uppstår automatiskt:</strong> Du behöver inte registrera din upphovsrätt.</li>
