gjorde ändringar på min webbsida

--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
 <!DOCTYPE html>
 <html lang="sv">
-    <head>
-     <meta charset="UTF-8"> 
-     <title>OmMig</title>
-     <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-    <h1>Tjenare</h1>
-    <p>Jag heter <strong>Maryam!!</strong> Jag går på <mark>NTI gymnasiet</mark> och är 17 år gammal.</p>
-    <a href="om-mig.html">kolla på min sida!</a>
+
+<head>
+    <meta charset="UTF-8">
+    <title>OmMig</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class="topnav">
+        <ul>
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="om-mig.html">Om mig</href>
+            </li>
+          <li><a href="https://ntisod.github.io/wutv1test-ntielias/upphovsr%C3%A4tten.html">Läs om upphovsrätten</a>
+            </li>
+            <li><a href="tim-berners-lee.html">Läs om Tim-Berners Lee</a></li>
+            <li><a href ="sumstuff">Läs om Webbens Historia</a></li>
+        </ul>
+    </div>
+    <main>
+        <section class="min-sida">
+            <h1>Tjenare</h1>
+            <p>Jag heter <strong>Maryam!!</strong> Jag går på <mark>NTI gymnasiet</mark> och är 17 år gammal.</p>
+            <br>
+            <a href="om-mig.html">kolla på min sida!</a>
+            <p></p>
+            <button onclick="showAlert()">Attention!!!"</button>
+             <button><a
+                    href="https://ntisod.github.io/wutv1test-ntielias/upphovsr%C3%A4tten.html">Läs om
+                    upphovsrätten</a></button>
+
+        </section>
+    </main>
     <script>
-         function showAlert() {
-        alert('Haha I got your attention.');
-    }
+        function showAlert() {
+            alert('Haha I got your attention.');
+        }
 
     </script>
-    <p></p>
-    <button onclick="showAlert()">Attention!!!<a href="https://ntisod.github.io/wutv1test-ntielias/upphovsr%C3%A4tten.html" >Läs om upphovsrätten</a></button>
+</body>
 
-    
-    </body>
- </html>
+</html>
