--- a/om-mig.html
+++ b/om-mig.html
@@ -20,7 +20,7 @@
    <p></p>
    <h2><strong>Backgrund</strong></h2>
    <p></p>
-   <max-width: 800px p>Jag kommer från Irak och har bott i Sverige i snart 9 år. Jag föddes den tredje augusti, 2007 och jag går på andra året teknik programmet i NTI Gymnasiet</p>
+   <max-width: 800px><p>Jag kommer från Irak och har bott i Sverige i snart 9 år. Jag föddes den tredje augusti, 2007 och jag går på andra året teknik programmet i NTI Gymnasiet</p>
    <p></p>
    <h2><strong>Tankar om framtiden</strong></h2>
    <br>
