--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>OmMig</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="topnav">
+    <nav class="topnav">
         <ul>
-            <li><a class="active" href="#home">Home</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
             <li><a href="om-mig.html">Om mig</href>
             </li>
           <li><a href="https://ntisod.github.io/wutv1test-ntielias/upphovsr%C3%A4tten.html">Läs om upphovsrätten</a>
             </li>
             <li><a href="tim-berners-lee.html">Läs om Tim-Berners Lee</a></li>
-            <li><a href ="sumstuff">Läs om Webbens Historia</a></li>
+            <li><a href ="webbeshistoria.html">Läs om Webbens Historia</a></li>
         </ul>
-    </div>
+    </nav>
     <main>
         <section class="min-sida">
             <h1>Tjenare</h1>
