Jag har gjort min webbsida

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <nav class="topnav">
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="om-mig.html">Om mig</href>
-            </li>
-          <li><a href="https://ntisod.github.io/wutv1test-ntielias/upphovsr%C3%A4tten.html">Läs om upphovsrätten</a>
-            </li>
+            <li><a href="om-mig.html">Om mig</a></li>
+            <li><a href="https://ntisod.github.io/wutv1test-ntielias/upphovsr%C3%A4tten.html">Läs om upphovsrätten</a></li>
             <li><a href="tim-berners-lee.html">Läs om Tim-Berners Lee</a></li>
-            <li><a href ="webbeshistoria.html">Läs om Webbens Historia</a></li>
+            <li><a href="webbeshistoria.html">Läs om Webbens Historia</a></li>
         </ul>
     </nav>
+    
     <main>
         <section class="min-sida">
             <h1>Tjenare</h1>
