Redigerade min sida, lagt till en mörk lila färg

--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
             <h1>Tjenare</h1>
             <p>Jag heter <strong>Maryam!!</strong> Jag går på <mark>NTI gymnasiet</mark> och är 17 år gammal.</p>
             <br>
+            <div class="link">
             <a href="om-mig.html">kolla på min sida!</a>
-            <p></p>
+            </div>
             <button onclick="showAlert()">Attention!!!"</button>
-             <button><a
-                    href="https://ntisod.github.io/wutv1test-ntielias/upphovsr%C3%A4tten.html">Läs om
-                    upphovsrätten</a></button>
-
+           
         </section>
     </main>
     <script>
